--- a/JQuery_Starter_Template/05_JQuery_AJAX/05_JQuery.html
+++ b/JQuery_Starter_Template/05_JQuery_AJAX/05_JQuery.html
@@ -23,13 +23,64 @@
     <!--########################  START HERE  #########################-->
 
     <!-- load another page in this page using AJAX load method -->
+    <div class="container">
+        <div class="row">
+
+            <div class="col-md-6">
+
+                <div class="card">
+                    <div class="card-header">
+                        <h3 class="card-title">Login Here</h3>
+                    </div>
+                    <div class="card-body" id="card-body">
+                        <!-- add form dynamically -->
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <a class="btn btn-teal" id="load-form-button">Load Form</a>
+            </div>
+        </div>
+    </div>
 
     <!-- load images from db.json file using AJAX get method -->
-
-
-
-
-
+    <div class="container mt-3">
+        <div class="row">
+            <div class="col">
+                <a class="btn btn-teal" id="load-images-btn">Load Images</a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="row text-center">
+                            <div class="col-md-2">
+                                <img id="image1" src="" class="img-fluid rounded-circle img-thumbnail">
+                                <h3 id="image1_name"></h3>
+                            </div>
+                            <div class="col-md-2">
+                                <img id="image2" src="" class="img-fluid rounded-circle img-thumbnail">
+                                <h3 id="image2_name"></h3>
+                            </div>
+                            <div class="col-md-2">
+                                <img id="image3" src="" class="img-fluid rounded-circle img-thumbnail">
+                                <h3 id="image3_name"></h3>
+                            </div>
+                            <div class="col-md-2">
+                                <img id="image4" src="" class="img-fluid rounded-circle img-thumbnail">
+                                <h3 id="image4_name"></h3>
+                            </div>
+                            <div class="col-md-2">
+                                <img id="image5" src="" class="img-fluid rounded-circle img-thumbnail">
+                                <h3 id="image5_name"></h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!--########################  ENDS HERE   #########################-->
 </div>
